change func. name expect -> Expect

--- a/docs/src/notebooks/quick_start.ipynb
+++ b/docs/src/notebooks/quick_start.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "import Heom\n",
-    "import Heom: Boson_DrudeLorentz_Pade, M_Boson, evolution, SteadyState, getRho, BosonBath, expect"
+    "import Heom: Boson_DrudeLorentz_Pade, M_Boson, evolution, SteadyState, getRho, BosonBath, Expect"
    ]
   },
   {
@@ -346,12 +346,12 @@
    "outputs": [],
    "source": [
     "# for steady state\n",
-    "p00_s = expect(P00.data, ados_steady)\n",
-    "p01_s = expect(P01.data, ados_steady)\n",
+    "p00_s = Expect(P00.data, ados_steady)\n",
+    "p01_s = Expect(P01.data, ados_steady)\n",
     "\n",
     "# for time evolution\n",
-    "p00_e = expect(P00.data, ados_list)\n",
-    "p01_e = expect(P01.data, ados_list);"
+    "p00_e = Expect(P00.data, ados_list)\n",
+    "p01_e = Expect(P01.data, ados_list);"
    ]
   },
   {
@@ -469,9 +469,9 @@
     "P22 = [0 0 0; 0 0 0; 0 0 1]\n",
     "\n",
     "# calculate population for each system state:\n",
-    "p0 = expect(P00, ados_list)\n",
-    "p1 = expect(P11, ados_list)\n",
-    "p2 = expect(P22, ados_list);"
+    "p0 = Expect(P00, ados_list)\n",
+    "p1 = Expect(P11, ados_list)\n",
+    "p2 = Expect(P22, ados_list);"
    ]
   },
   {
