build based on 51478be

--- a/dev/notebooks/quick_start.ipynb
+++ b/dev/notebooks/quick_start.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "06e7ec9e-582b-493b-a574-51908c50ced7",
    "metadata": {
@@ -17,6 +18,8 @@
     " - [HEOM liouvillian superoperator](#HEOM-liouvillian-superoperator)\n",
     " - [Time Evolution](#Time-Evolution)\n",
     " - [Stationary State](#Stationary-State)\n",
+    " - [Reduced Density Operator](#Reduced-Density-Operator)\n",
+    " - [Expectation Value](#Expectation-Value)\n",
     " - [Multiple Baths](#Multiple-Baths)"
    ]
   },
@@ -38,7 +41,8 @@
    },
    "outputs": [],
    "source": [
-    "import Heom: Boson_DrudeLorentz_Pade, M_Boson, evolution, SteadyState, getRho, BosonBath"
+    "import Heom\n",
+    "import Heom: Boson_DrudeLorentz_Pade, M_Boson, evolution, SteadyState, getRho, BosonBath, Expect"
    ]
   },
   {
@@ -47,6 +51,24 @@
    "metadata": {},
    "source": [
     "Note that you can also type `using Heom` to import everything you need in `Heom.jl`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06b69214-9c91-4c95-ac6a-4e95fad9af70",
+   "metadata": {},
+   "source": [
+    "To check the versions of dependencies of `Heom.jl` , run the following function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bfb8805-76b8-4b09-8f85-7a76c77a8151",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Heom.versioninfo();"
    ]
   },
   {
@@ -138,11 +160,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "05433ef2-e7dd-412e-a890-e19590f22ea5",
    "metadata": {},
    "source": [
-    "For other different expansions of the different spectral density correlation functions, please refer to [Bosonic Bath](@ref) and [Fermionic Bath](@ref)."
+    "For other different expansions of the different spectral density correlation functions, please refer to [Bosonic Bath](@ref doc-Bosonic-Bath) and [Fermionic Bath](@ref doc-Fermionic-Bath)."
    ]
   },
   {
@@ -172,11 +195,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6ee0559f-ebeb-4c28-afe3-9e7a02aa9e61",
    "metadata": {},
    "source": [
-    "To learn more about the Heom liouvillian superoperator matrix (including other types: `M_Fermion`, `M_Boson_Fermion`), please refer to [HEOM Matrix](@ref)."
+    "To learn more about the Heom liouvillian superoperator matrix (including other types: `M_Fermion`, `M_Boson_Fermion`), please refer to [HEOMLS Matrices](@ref doc-HEOMLS-Matrix)."
    ]
   },
   {
@@ -205,11 +229,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "719a3983-86d3-47c9-9fcc-03af8fc864fc",
    "metadata": {},
    "source": [
-    "To learn more about `evolution`, please refer to [Auxiliary Density Operators](@ref)."
+    "To learn more about `evolution`, please refer to [Time Evolution](@ref doc-Time-Evolution)."
    ]
   },
   {
@@ -232,30 +257,68 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "91bc20ae-413f-49b0-855f-ba6f9e3b3178",
    "metadata": {},
    "source": [
-    "To learn more about `SteadyState`, please refer to [Auxiliary Density Operators](@ref)."
+    "To learn more about `SteadyState`, please refer to [Stationary State](@ref doc-Stationary-State)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "2db23238-ea56-4d5d-bbad-5738a3518a90",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Reduced Density Operator"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2db23238-ea56-4d5d-bbad-5738a3518a90",
+   "id": "615d6e53-26e0-435e-8c66-856db68401f6",
    "metadata": {},
    "source": [
-    "#### Calculate population and coherence\n",
-    "We can now compare the results obtained from `evolution` and `SteadyState`:"
+    "To obtain the reduced density operator, one can either access the first element of auxiliary density operator (`ADOs`) or call [`getRho`](@ref):"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ca86f04-2b2a-4cee-8e46-04269a86b491",
-   "metadata": {},
+   "id": "7d1edc24-e295-48f5-bcc4-173576882b2d",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "import LinearAlgebra: tr  # import trace function"
+    "# reduce density operator in third time step of the evolution\n",
+    "ρ = ados_list[3][1]\n",
+    "ρ = getRho(ados_list[3])\n",
+    "\n",
+    "# reduce density operator in stationary state\n",
+    "ρ = ados_steady[1]\n",
+    "ρ = getRho(ados_steady);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3d74afad-6d70-4c9a-bf75-c8b239c3aecc",
+   "metadata": {},
+   "source": [
+    "One of the great features of `Heom.jl` is that we allow users to not only considering the density operator of the reduced\n",
+    "state but also easily take high-order terms into account without struggling in finding the indices (see [Auxiliary Density Operators](@ref doc-ADOs) and [Hierarchy Dictionary](@ref doc-Hierarchy-Dictionary) for more details)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4acd0d2-86ab-4d3c-b9b9-b57fbaea52a7",
+   "metadata": {},
+   "source": [
+    "### Expectation Value\n",
+    "We can now compare the results obtained from `evolution` and `SteadyState`:"
    ]
   },
   {
@@ -276,44 +339,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "615d6e53-26e0-435e-8c66-856db68401f6",
-   "metadata": {},
-   "source": [
-    "To obtain the reduced density operator, one can either access the first element of auxiliary density operator (`ADOs`) or call [`getRho`](@ref):"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d1edc24-e295-48f5-bcc4-173576882b2d",
-   "metadata": {
-    "tags": []
-   },
+   "id": "e35c9469-749f-4743-a645-0c8e3b8e124c",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# for steady state\n",
-    "ρs = ados_steady[1]  # 1 represents the 1st auxiliary density operator (reduce state)\n",
-    "p00_s = real(tr(P00.data * ρs))\n",
-    "p01_s = real(tr(P01.data * ρs))\n",
+    "p00_s = Expect(P00.data, ados_steady)\n",
+    "p01_s = Expect(P01.data, ados_steady)\n",
     "\n",
     "# for time evolution\n",
-    "p00_e = []\n",
-    "p01_e = []\n",
-    "for i in 1:length(tlist)\n",
-    "    ρe = ados_list[i][1]\n",
-    "    push!(p00_e, real(tr(P00.data * ρe)))\n",
-    "    push!(p01_e, real(tr(P01.data * ρe)))\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3d74afad-6d70-4c9a-bf75-c8b239c3aecc",
-   "metadata": {},
-   "source": [
-    "One of the great features of `Heom.jl` is that we allow users to not only considering the density operator of the reduced\n",
-    "state but also easily take high-order terms into account without struggling in finding the indices (see [Hierarchy Dictionary](@ref) for more details)."
+    "p00_e = Expect(P00.data, ados_list)\n",
+    "p01_e = Expect(P01.data, ados_list);"
    ]
   },
   {
@@ -321,7 +359,7 @@
    "id": "dd8f50cf-7a34-4a6f-ba22-22e75265f3ba",
    "metadata": {},
    "source": [
-    "#### Plot the results"
+    "### Plot the results"
    ]
   },
   {
@@ -331,8 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Plots\n",
-    "Plots.scalefontsizes(1.5)"
+    "using PyPlot, LaTeXStrings"
    ]
   },
   {
@@ -342,26 +379,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = plot(\n",
-    "    tlist, \n",
-    "    [\n",
-    "        p00_e,\n",
-    "        p01_e,\n",
-    "        ones(length(tlist)) .* p00_s, \n",
-    "        ones(length(tlist)) .* p01_s,\n",
-    "    ],\n",
-    "    label=[\"P00\" \"P01\" \"P00 (Steady State)\" \"P01 (Steady State)\"],\n",
-    "    linecolor=[ :blue   :red :blue  :red],\n",
-    "    linestyle=[:solid :solid :dash :dash],\n",
-    "    xlabel=\"time\",\n",
-    "    ylabel=\"Population\",\n",
-    "    fontfamily=\"Computer Modern\",\n",
-    "    linewidth=3, \n",
-    "    grid=false,\n",
-    "    dpi=300 \n",
-    ")\n",
-    "\n",
-    "p"
+    "lw = 3\n",
+    "plot(tlist, p00_e, \"-\", linewidth=lw, color=\"blue\", label=L\"\\textrm{P}_{00}\")\n",
+    "plot(tlist, p01_e, \"-\", linewidth=lw, color=\"red\",  label=L\"\\textrm{P}_{01}\")\n",
+    "plot(tlist, ones(length(tlist)) .* p00_s, \"--\", linewidth=lw, color=\"blue\", label=L\"\\textrm{P}_{00} \\textrm{(Steady State)}\")\n",
+    "plot(tlist, ones(length(tlist)) .* p01_s, \"--\", linewidth=lw, color=\"red\",  label=L\"\\textrm{P}_{01} \\textrm{(Steady State)}\")\n",
+    "xlabel(\"time\")\n",
+    "ylabel(\"Population\")\n",
+    "legend()\n",
+    "show()"
    ]
   },
   {
@@ -371,7 +397,9 @@
    "source": [
     "### Multiple Baths\n",
     "`Heom.jl` also supports for system to interact with multiple baths.  \n",
-    "All you need to do is to provide a list of baths instead of a single bath"
+    "All you need to do is to provide a list of baths instead of a single bath\n",
+    "\n",
+    "Note that, for the following, we use the built-in linear algebra in Julia (instead of `QuantumOptics.jl`) to construct the operators "
    ]
   },
   {
@@ -441,15 +469,9 @@
     "P22 = [0 0 0; 0 0 0; 0 0 1]\n",
     "\n",
     "# calculate population for each system state:\n",
-    "p0 = []\n",
-    "p1 = []\n",
-    "p2 = []\n",
-    "for ados in ados_list\n",
-    "    ρ = getRho(ados)  # same as ados[1]\n",
-    "    push!(p0, real(tr(P00 * ρ)))\n",
-    "    push!(p1, real(tr(P11 * ρ)))\n",
-    "    push!(p2, real(tr(P22 * ρ)))\n",
-    "end"
+    "p0 = Expect(P00, ados_list)\n",
+    "p1 = Expect(P11, ados_list)\n",
+    "p2 = Expect(P22, ados_list);"
    ]
   },
   {
@@ -459,21 +481,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = plot(\n",
-    "    tlist, \n",
-    "    [p0, p1, p2],\n",
-    "    label=[\"P0\" \"P1\" \"P2\"],\n",
-    "    linecolor=[ :blue :red :green],\n",
-    "    linestyle=[:solid :dot  :dash],\n",
-    "    xlabel=\"time\",\n",
-    "    ylabel=\"Population\",\n",
-    "    fontfamily=\"Computer Modern\",\n",
-    "    linewidth=2, \n",
-    "    grid=false,\n",
-    "    dpi=300 \n",
-    ")\n",
-    "\n",
-    "p"
+    "lw = 2\n",
+    "plot(tlist, p0, \"-\",  linewidth=lw, color=\"blue\",   label=L\"P_0\")\n",
+    "plot(tlist, p1, \"-\",  linewidth=lw, color=\"orange\", label=L\"P_1\")\n",
+    "plot(tlist, p2, \"-\", linewidth=lw, color=\"green\",   label=L\"P_2\")\n",
+    "xlabel(\"time\")\n",
+    "ylabel(\"Population\")\n",
+    "legend()\n",
+    "show();"
    ]
   },
   {
@@ -483,21 +498,13 @@
    "source": [
     "Note that this example can also be found in [qutip documentation](https://qutip.org/docs/latest/guide/heom/bosonic.html)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8699abf5-676b-4e0c-9a75-08245f29b756",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "Julia 1.8.0",
    "language": "julia",
-   "name": "julia-1.8"
+   "name": "julia"
   },
   "language_info": {
    "file_extension": ".jl",
