--- a/docs/src/notebooks/quick_start.ipynb
+++ b/docs/src/notebooks/quick_start.ipynb
@@ -13,9 +13,9 @@
     "(*This notebook can be found on* [github](https://github.com/NCKU-QFort/Heom.jl/tree/main/docs/src/notebooks))\n",
     "\n",
     "### Content\n",
-    " - [Import Heom.jl](#Import-Heom.jl)\n",
+    " - [Import HEOM.jl](#Import-HEOM.jl)\n",
     " - [System and Bath](#System-and-Bath)\n",
-    " - [HEOM liouvillian superoperator](#HEOM-liouvillian-superoperator)\n",
+    " - [HEOM Liouvillian superoperator](#HEOM-Liouvillian-superoperator)\n",
     " - [Time Evolution](#Time-Evolution)\n",
     " - [Stationary State](#Stationary-State)\n",
     " - [Reduced Density Operator](#Reduced-Density-Operator)\n",
@@ -24,12 +24,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c93b63e6-d88e-4383-aab6-40dca75c85bb",
    "metadata": {},
    "source": [
-    "### Import Heom.jl\n",
-    "Here are the functions in `Heom.jl` that we will use in this tutorial (Quick Start):"
+    "### Import HEOM.jl\n",
+    "Here are the functions in `HEOM.jl` that we will use in this tutorial (Quick Start):"
    ]
   },
   {
@@ -41,24 +42,26 @@
    },
    "outputs": [],
    "source": [
-    "import Heom\n",
-    "import Heom: Boson_DrudeLorentz_Pade, M_Boson, evolution, SteadyState, getRho, BosonBath, Expect"
+    "import HEOM\n",
+    "import HEOM: Boson_DrudeLorentz_Pade, M_Boson, evolution, SteadyState, getRho, BosonBath, Expect"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d889c87c-8486-48a1-ae3d-b4c5482098ca",
    "metadata": {},
    "source": [
-    "Note that you can also type `using Heom` to import everything you need in `Heom.jl`."
+    "Note that you can also type `using HEOM` to import everything you need in `HEOM.jl`."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "06b69214-9c91-4c95-ac6a-4e95fad9af70",
    "metadata": {},
    "source": [
-    "To check the versions of dependencies of `Heom.jl` , run the following function"
+    "To check the versions of dependencies of `HEOM.jl` , run the following function"
    ]
   },
   {
@@ -68,10 +71,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Heom.versioninfo();"
+    "HEOM.versioninfo();"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cb87f74c-1421-4105-a531-8b57df8c7530",
    "metadata": {},
@@ -83,6 +87,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "149f0b48-e2c7-4351-a8cc-630d89234ba8",
    "metadata": {},
@@ -92,8 +97,8 @@
     "\n",
     "Moreover, it is also convenient to use [QuantumOptics](https://qojulia.org/) framework. It provides many useful functions to create arbitrary quantum states and operators which can be combined in all the expected ways.\n",
     "\n",
-    "Note that `Heom.jl` only accept standard julia bulit-in types. If you use `QuantumOptics` to construct the operators, remember that the matrix (or vector) in standard type are stored in `.data` field of the objects, i.e., `op.data` where `op` is a `QuantumOptics`-type object.  \n",
-    "Thus, you should take it as the inputs of `Heom.jl` for objects in `QuantumOptics` package.\n",
+    "Note that `HEOM.jl` only accept standard julia bulit-in types. If you use `QuantumOptics` to construct the operators, remember that the matrix (or vector) in standard type are stored in `.data` field of the objects, i.e., `op.data` where `op` is a `QuantumOptics`-type object.  \n",
+    "Thus, you should take it as the inputs of `HEOM.jl` for objects in `QuantumOptics` package.\n",
     "\n",
     "We demonstrate this tutorial by `QuantumOptics`:"
    ]
@@ -128,6 +133,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "17637e2b-1431-417f-81aa-dd587cf33579",
    "metadata": {},
@@ -169,12 +175,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bd1c398f-029f-4182-aee9-9378a9db5f0e",
    "metadata": {},
    "source": [
-    "### HEOM liouvillian superoperator\n",
-    "For bosonic bath, we can construct the Heom liouvillian superoperator matrix by calling [`M_Boson`](@ref)"
+    "### HEOM Liouvillian superoperator\n",
+    "For bosonic bath, we can construct the HEOM Liouvillian superoperator matrix by calling [`M_Boson`](@ref)"
    ]
   },
   {
@@ -200,10 +207,11 @@
    "id": "6ee0559f-ebeb-4c28-afe3-9e7a02aa9e61",
    "metadata": {},
    "source": [
-    "To learn more about the Heom liouvillian superoperator matrix (including other types: `M_Fermion`, `M_Boson_Fermion`), please refer to [HEOMLS Matrices](@ref doc-HEOMLS-Matrix)."
+    "To learn more about the HEOM Liouvillian superoperator matrix (including other types: `M_Fermion`, `M_Boson_Fermion`), please refer to [HEOMLS Matrices](@ref doc-HEOMLS-Matrix)."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ccdeb300-2fa1-4627-85d9-346a25d652d0",
    "metadata": {
@@ -238,6 +246,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8ae6ef93-035d-46a1-9a4d-91ce3e5f46f4",
    "metadata": {},
@@ -277,6 +286,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "615d6e53-26e0-435e-8c66-856db68401f6",
    "metadata": {},
@@ -308,11 +318,12 @@
    "id": "3d74afad-6d70-4c9a-bf75-c8b239c3aecc",
    "metadata": {},
    "source": [
-    "One of the great features of `Heom.jl` is that we allow users to not only considering the density operator of the reduced\n",
+    "One of the great features of `HEOM.jl` is that we allow users to not only considering the density operator of the reduced\n",
     "state but also easily take high-order terms into account without struggling in finding the indices (see [Auxiliary Density Operators](@ref doc-ADOs) and [Hierarchy Dictionary](@ref doc-Hierarchy-Dictionary) for more details)."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d4acd0d2-86ab-4d3c-b9b9-b57fbaea52a7",
    "metadata": {},
@@ -355,6 +366,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dd8f50cf-7a34-4a6f-ba22-22e75265f3ba",
    "metadata": {},
@@ -391,12 +403,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "958acea2-d842-4514-aae3-e3a7cf98a75c",
    "metadata": {},
    "source": [
     "### Multiple Baths\n",
-    "`Heom.jl` also supports for system to interact with multiple baths.  \n",
+    "`HEOM.jl` also supports for system to interact with multiple baths.  \n",
     "All you need to do is to provide a list of baths instead of a single bath\n",
     "\n",
     "Note that, for the following, we use the built-in linear algebra in Julia (instead of `QuantumOptics.jl`) to construct the operators "
@@ -492,6 +505,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "df2f467f-045e-4456-8396-1b03e0f1ea24",
    "metadata": {},
