Rename package HEOM to HierarchicalEOM and ready for first release

--- a/docs/src/notebooks/quick_start.ipynb
+++ b/docs/src/notebooks/quick_start.ipynb
@@ -10,10 +10,10 @@
    "source": [
     "# Quick Start\n",
     "\n",
-    "(*This notebook can be found on* [github](https://github.com/NCKU-QFort/Heom.jl/tree/main/docs/src/notebooks))\n",
+    "(*This notebook can be found on* [github](https://github.com/NCKU-QFort/HierarchicalEOM.jl/blob/main/docs/src/notebooks/quick_start.ipynb))\n",
     "\n",
     "### Content\n",
-    " - [Import HEOM.jl](#Import-HEOM.jl)\n",
+    " - [Import HierarchicalEOM.jl](#Import-HierarchicalEOM.jl)\n",
     " - [System and Bath](#System-and-Bath)\n",
     " - [HEOM Liouvillian superoperator](#HEOM-Liouvillian-superoperator)\n",
     " - [Time Evolution](#Time-Evolution)\n",
@@ -29,8 +29,8 @@
    "id": "c93b63e6-d88e-4383-aab6-40dca75c85bb",
    "metadata": {},
    "source": [
-    "### Import HEOM.jl\n",
-    "Here are the functions in `HEOM.jl` that we will use in this tutorial (Quick Start):"
+    "### Import HierarchicalEOM.jl\n",
+    "Here are the functions in `HierarchicalEOM.jl` that we will use in this tutorial (Quick Start):"
    ]
   },
   {
@@ -42,8 +42,8 @@
    },
    "outputs": [],
    "source": [
-    "import HEOM\n",
-    "import HEOM: Boson_DrudeLorentz_Pade, M_Boson, evolution, SteadyState, getRho, BosonBath, Expect"
+    "import HierarchicalEOM\n",
+    "import HierarchicalEOM: Boson_DrudeLorentz_Pade, M_Boson, evolution, SteadyState, getRho, BosonBath, Expect"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "id": "d889c87c-8486-48a1-ae3d-b4c5482098ca",
    "metadata": {},
    "source": [
-    "Note that you can also type `using HEOM` to import everything you need in `HEOM.jl`."
+    "Note that you can also type `using HierarchicalEOM` to import everything you need in `HierarchicalEOM.jl`."
    ]
   },
   {
@@ -61,7 +61,7 @@
    "id": "06b69214-9c91-4c95-ac6a-4e95fad9af70",
    "metadata": {},
    "source": [
-    "To check the versions of dependencies of `HEOM.jl` , run the following function"
+    "To check the versions of dependencies of `HierarchicalEOM.jl` , run the following function"
    ]
   },
   {
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "HEOM.versioninfo();"
+    "HierarchicalEOM.versioninfo();"
    ]
   },
   {
@@ -97,8 +97,8 @@
     "\n",
     "Moreover, it is also convenient to use [QuantumOptics](https://qojulia.org/) framework. It provides many useful functions to create arbitrary quantum states and operators which can be combined in all the expected ways.\n",
     "\n",
-    "Note that `HEOM.jl` only accept standard julia bulit-in types. If you use `QuantumOptics` to construct the operators, remember that the matrix (or vector) in standard type are stored in `.data` field of the objects, i.e., `op.data` where `op` is a `QuantumOptics`-type object.  \n",
-    "Thus, you should take it as the inputs of `HEOM.jl` for objects in `QuantumOptics` package.\n",
+    "Note that `HierarchicalEOM.jl` only accept standard julia bulit-in types. If you use `QuantumOptics` to construct the operators, remember that the matrix (or vector) in standard type are stored in `.data` field of the objects, i.e., `op.data` where `op` is a `QuantumOptics`-type object.  \n",
+    "Thus, you should take it as the inputs of `HierarchicalEOM.jl` for objects in `QuantumOptics` package.\n",
     "\n",
     "We demonstrate this tutorial by `QuantumOptics`:"
    ]
@@ -318,7 +318,7 @@
    "id": "3d74afad-6d70-4c9a-bf75-c8b239c3aecc",
    "metadata": {},
    "source": [
-    "One of the great features of `HEOM.jl` is that we allow users to not only considering the density operator of the reduced\n",
+    "One of the great features of `HierarchicalEOM.jl` is that we allow users to not only considering the density operator of the reduced\n",
     "state but also easily take high-order terms into account without struggling in finding the indices (see [Auxiliary Density Operators](@ref doc-ADOs) and [Hierarchy Dictionary](@ref doc-Hierarchy-Dictionary) for more details)."
    ]
   },
@@ -409,7 +409,7 @@
    "metadata": {},
    "source": [
     "### Multiple Baths\n",
-    "`HEOM.jl` also supports for system to interact with multiple baths.  \n",
+    "`HierarchicalEOM.jl` also supports for system to interact with multiple baths.  \n",
     "All you need to do is to provide a list of baths instead of a single bath\n",
     "\n",
     "Note that, for the following, we use the built-in linear algebra in Julia (instead of `QuantumOptics.jl`) to construct the operators "
