--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,5 +1,5 @@
-@article{HEOM-jl2023,
-  title={{HEOM.jl}: {A}n efficient {J}ulia framework for hierarchical equations of motion in open quantum systems},
+@article{HierarchicalEOM-jl2023,
+  title={{HierarchicalEOM.jl}: {A}n efficient {J}ulia framework for hierarchical equations of motion in open quantum systems},
   author={Huang, Yi-Te and Kuo, Po-Chen and Lambert, Neill and Cirio, Mauro and Cross, Simon and Yang, Shen-Liang and Nori, Franco and Chen, Yueh-Nan},
   journal={arXiv preprint arXiv:2306.07522},
   year={2023}
