--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,6 +1,13 @@
 @article{HierarchicalEOM-jl2023,
-  title={{HierarchicalEOM.jl}: {A}n efficient {J}ulia framework for hierarchical equations of motion in open quantum systems},
-  author={Huang, Yi-Te and Kuo, Po-Chen and Lambert, Neill and Cirio, Mauro and Cross, Simon and Yang, Shen-Liang and Nori, Franco and Chen, Yueh-Nan},
-  journal={arXiv preprint arXiv:2306.07522},
-  year={2023}
+  doi = {10.1038/s42005-023-01427-2},
+  url = {https://doi.org/10.1038/s42005-023-01427-2},
+  year = {2023},
+  month = {Oct},
+  publisher = {Nature Portfolio},
+  volume = {6},
+  number = {1},
+  pages = {313},
+  author = {Huang, Yi-Te and Kuo, Po-Chen and Lambert, Neill and Cirio, Mauro and Cross, Simon and Yang, Shen-Liang and Nori, Franco and Chen, Yueh-Nan},
+  title = {An efficient {J}ulia framework for hierarchical equations of motion in open quantum systems},
+  journal = {Communications Physics}
 }
