update citation bibtex and bump version to `v2.7.0`

--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,13 +1,27 @@
-@article{HierarchicalEOM-jl2023,
-  doi = {10.1038/s42005-023-01427-2},
-  url = {https://doi.org/10.1038/s42005-023-01427-2},
-  year = {2023},
-  month = {Oct},
+@article{HierarchicalEOM.jl2023,
+  title = {An efficient {J}ulia framework for hierarchical equations of motion in open quantum systems},
+  author = {Huang, Yi-Te and Kuo, Po-Chen and Lambert, Neill and Cirio, Mauro and Cross, Simon and Yang, Shen-Liang and Nori, Franco and Chen, Yueh-Nan},  
+  journal = {Communications Physics},
   publisher = {Nature Portfolio},
   volume = {6},
   number = {1},
   pages = {313},
-  author = {Huang, Yi-Te and Kuo, Po-Chen and Lambert, Neill and Cirio, Mauro and Cross, Simon and Yang, Shen-Liang and Nori, Franco and Chen, Yueh-Nan},
-  title = {An efficient {J}ulia framework for hierarchical equations of motion in open quantum systems},
-  journal = {Communications Physics}
+  month = {Oct},
+  year = {2023},
+  doi = {10.1038/s42005-023-01427-2},
+  url = {https://doi.org/10.1038/s42005-023-01427-2}
+}
+
+@article{QuantumToolbox.jl2025,
+  title = {Quantum{T}oolbox.jl: {A}n efficient {J}ulia framework for simulating open quantum systems},
+  author = {Mercurio, Alberto and Huang, Yi-Te and Cai, Li-Xun and Chen, Yueh-Nan and Savona, Vincenzo and Nori, Franco},
+  journal = {{Quantum}},
+  issn = {2521-327X},
+  publisher = {{Verein zur F{\"{o}}rderung des Open Access Publizierens in den Quantenwissenschaften}},
+  volume = {9},
+  pages = {1866},
+  month = sep,
+  year = {2025},
+  doi = {10.22331/q-2025-09-29-1866},
+  url = {https://doi.org/10.22331/q-2025-09-29-1866}
 }
